@@ -3,7 +3,10 @@ python-debian (0.1.8) UNRELEASED; urgency=low
   [ Filippo Giunchedi ]
   * Move tests to a separate subdirectory.
 
- -- Adeodato Simó <dato@net.com.org.es>  Thu, 29 Nov 2007 18:52:06 +0100
+  [ Stefano Zacchiroli ]
+  * Add examples dir for deb822 with a simple example.
+
+ -- Stefano Zacchiroli <zack@debian.org>  Mon, 24 Dec 2007 12:06:49 +0100
 
 python-debian (0.1.7) unstable; urgency=low
 
